fixed layout issue with project card

--- a/sass/layout/_home.scss
+++ b/sass/layout/_home.scss
@@ -192,6 +192,11 @@
 		}
 	}
 
+	&__scroll-down-btn {
+		display: block;
+		height: 100%;
+	}
+
 	&__down-arrow-target {
 		width: auto;
 		height: auto;
