--- a/sass/layout/_projects.scss
+++ b/sass/layout/_projects.scss
@@ -31,6 +31,7 @@
 		}
 	}
 	&__card {
+		height: 100%;
 		max-width: 45rem;
 		color: #a7a7a7;
 		background: #1d1d1d;
@@ -72,14 +73,8 @@
 	}
 	&__card-container {
 		padding: 1rem;
-		height: 100%;
-		display: grid;
-		grid-template-columns: 1fr;
-		grid-template-rows: auto 1fr min-content;
+		height: 90%;
 	}
-	// &__card-body {
-	// // flex-grow: 1;
-	// }
 	&__title {
 		font-weight: 500;
 		font-size: 3rem;
@@ -89,12 +84,11 @@
 		}
 	}
 	&__card-text {
-		// flex-grow: 1;
 		font-size: 1.8rem;
 		padding: 1rem 0;
 	}
 	&__card-footer {
-		height: 6rem;
+		height: 10%;
 		background: #2c2c2c;
 		padding: 1rem;
 		display: flex;
